# CockpitDrivers

./: platformio.ini
AltimeterDriver/lib/SiMessagePort/src/: sim_extern_shared.h
AltimeterDriver/src/: AirManager.cpp  AirManager.h  Altimeter.cpp  Altimeter.h  BenchDebug.cpp  BenchDebug.h  CheapStepper.cpp  CheapStepper.h  CockpitDrivers.code-workspace  Configuration.h  DebugLog.h  main.cpp
CANDebugNode/: platformio.ini
CANDebugNode/src/: CAN.cpp  CAN.h  Configuration.h  LCD.cpp  LCD.h  main.cpp
DCU/: platformio.ini
DCU/src/: BenchDebug.cpp  BenchDebug.h  CAN.cpp  CAN.h  Configuration.h  DCUReceiver.cpp  DCUReceiver.h  DCUSender.cpp  DCUSender.h  DebugLog.h  main.cpp
DCUProviderPlugin/: .gitignore  CMakeLists.txt  DCUProviderPlugin.code-workspace  README.md  build-all.sh  build-macos.sh  build-windows.sh  build.sh  toolchain-mingw64.cmake  xplm.def
DCUProviderPlugin/CSVs/: Blatt 1-CAN Message IDs.csv  Blatt 1-Cluster Inputs 0x300-0x37F.csv  Blatt 1-Cluster Instruments Fast: 0x100-0x17F.csv  Blatt 1-Cluster Instruments Slow: 0x200-0x27F.csv  Blatt 1-DataRefs.csv  USB-TransportProtokoll.md
DCUProviderPlugin/SDK/: README.txt
DCUProviderPlugin/SDK/CHeaders/XPLM/: XPLMWeather.h
DCUProviderPlugin/SDK/Delphi/XPLM/: XPLMWeather.pas
DCUProviderPlugin/SDK/Libraries/Mac/XPLM.framework/Versions/C/: XPLM
DCUProviderPlugin/SDK/Libraries/Mac/XPWidgets.framework/Versions/C/: XPWidgets
DCUProviderPlugin/src/: ConfigUtils.cpp  ConfigUtils.h  ConnectionManager.cpp  ConnectionManager.h  DCUProvider.cpp  DCUProvider.h  DataRefManager.cpp  DataRefManager.h  MessageQueue.cpp  MessageQueue.h  Plugin.cpp  SerialPort.cpp  SerialPort.h  SerialPortUtils.cpp  SerialPortUtils.h  StatusWindow.cpp  StatusWindow.h  TransportLayer.cpp  TransportLayer.h
FuelGaugeCAN/: platformio.ini
FuelGaugeCAN/src/: BenchDebug.cpp  BenchDebug.h  CAN.cpp  CAN.h  Configuration.h  FuelGauge.cpp  FuelGauge.h  main.cpp
HSIDriver/: AirManager.h  HSI.cpp  InterruptCheck.code-workspace  platformio.ini
HSIDriver/lib/SiMessagePort/src/: si_circular_data.h  sim_extern_client.h
HSIDriver/src/: AirManager.cpp  BenchDebug.cpp  BenchDebug.h  CheapStepper.cpp  CheapStepper.h  Configuration.h  HSI.cpp  HSI.h  main.cpp
HandbrakeCAN/: platformio.ini
HandbrakeCAN/src/: BenchDebug.cpp  BenchDebug.h  CAN.cpp  CAN.h  Configuration.h  DebugLog.h  Handbrake.cpp  Handbrake.h  main.cpp
I2CBoard/: platformio.ini
I2CBoard/lib/SiMessagePort/: library.properties
I2CBoard/lib/SiMessagePort/examples/BasicExample/: BasicExample.ino
I2CBoard/lib/SiMessagePort/src/: si_circular_data.c  si_input_buffer.h  si_message_port.c  si_message_port.cpp  si_message_port.h  si_message_port.hpp  si_message_port_driver.cpp  si_message_port_driver.h  si_output_buffer.c  si_output_buffer.h  sim_extern_shared.c
I2CBoard/src/: AirManager.cpp  AirManager.h  BenchDebug.cpp  BenchDebug.h  DebugLog.h  DigitsFont.cpp  I2CBoard.code-workspace  OLED0in91.cpp  Tachometer.h  main.cpp
MasterClock/: platformio.ini
MasterClock/src/: BenchDebug.cpp  BenchDebug.h  DigitsFont.h  M803Clock.cpp  M803Clock.h  OLED0in91.h  Tachometer.cpp  main.cpp
MotionActor/: platformio.ini
MotionActor/src/: CAN.cpp  CAN.h  Configuration.h  DebugLog.cpp  DebugLog.h  MotionActor.cpp  MotionActor.h  main.cpp
MotionGateway/src/: BenchDebug.cpp  BenchDebug.h  CAN.cpp  CAN.h  Configuration.h  DebugLog.h  MotionGateway.cpp  MotionGateway.h  MotionSender.cpp  MotionSender.h  main.cpp
ServoBoard/: platformio.ini
ServoBoard/lib/SiMessagePort/src/: si_input_buffer.c  si_network.c
ServoBoard/src/: AirManager.cpp  AirManager.h  BenchDebug.cpp  BenchDebug.h  CockpitDrivers.code-workspace  Configuration.h  Servos.cpp  Servos.h  main.cpp
StepperBoard/: platformio.ini
StepperBoard/lib/SiMessagePort/src/: si_base.h
StepperBoard/src/: AirManager.cpp  AirManager.h  BenchDebug.cpp  BenchDebug.h  CheapStepper.cpp  CheapStepper.h  Configuration.h  DebugLog.h  GyroDrive.cpp  GyroDrive.h  HSI.cpp  HSI.h  Transponder.cpp  Transponder.h  X25Motors.cpp  X25Motors.h  main.cpp
TransponderBoard/: platformio.ini
TransponderBoard/lib/SiMessagePort/src/: si_network.h  sim_extern_client.c
TransponderBoard/src/: AirManager.cpp  AirManager.h  BenchDebug.cpp  BenchDebug.h  CAN.cpp  CAN.h  Configuration.h  DebugLog.h  Transponder.cpp  Transponder.h  main.cpp
etc/AirManagerBackups/: PA28 - Alt Amp Gauge HardwareID.siff  PA28 - Altimeter (MSG-L).siff  PA28 - Annunc HardwareID.siff  PA28 - CockpitDriver (MSG).siff  PA28 - CockpitDriver (MSG-P).siff  PA28 - DimmerPanel HardwareID.siff  PA28 - ElevatorTrim HardwareID.siff  PA28 - GNS 430 HardwareID-A.siff  PA28 - GNS 430 HardwareID.siff  PA28 - GNS 430-DisplayStream.siff  PA28 - HSI (MSG).siff  PA28 - HSI (MSG-H).siff  PA28 - OdometerDriver (MSG).siff  PA28 - OdometerDriver (MSG-O).siff  PA28 - ServoDriver (MSG).siff  PA28 - ServoDriver (MSG-N).siff  PA28 - Starter HardwareID.siff  PA28 - Switchboard HardwareID-A.siff  PA28 - Switchboard HardwareID.siff
etc/AirManagerCleartextLUA/: Altimeter-MSG-L.lua  Annunc HWID.lua  DimmerPanelHWID.lua  GNS430 HWID.lua  HSI-MSG-H.lua  OdometerDriver-MSG-O.lua  ServoDriver-MSG-N.lua  Starter HWID.lua  StepperCockpitDrivers.lua  Switchboard HWID.lua  Transpomder-MSG-M.lua
shared/CANBase/: library.json  platformio.ini
shared/CANBase/include/: BaseCAN.h  CanMessageId.h  CanNodeId.h  InstrumentCAN.h  MotionMessageId.h  MotionNodeId.h  SerialMessageId.h
shared/CANBase/src/: BaseCAN.cpp  InstrumentCAN.cpp  main.cpp
src/: AirManager.cpp  AirManager.h  BenchDebug.cpp  BenchDebug.h  CheapStepper.cpp  CheapStepper.h  Configuration.h  GyroDrive.cpp  GyroDrive.h  OLED0in91.cpp  OLED0in91.h  Tachometer.cpp  Tachometer.h  X25Motors.cpp  X25Motors.h  main.cpp
